// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hashtag rendering WHEN disabled in config THEN hashtags don't get parsed or processed 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>#test</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering WHEN disabled in config THEN hashtags don't get parsed or processed 2`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p>#test</p>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering colors overrides color cascading from parent 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #00FF11;\\" href=\\"tags.parent.color\\">#parent.color</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"tags\\">Tags</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering colors when enableRandomlyGeneratedColors is false, only uses explicit colors 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #FF0033;\\" href=\\"tags.color\\">#color</a> <a href=\\"tags.uncolored\\">#uncolored</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"tags\\">Tags</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering colors with color 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #FF0033;\\" href=\\"tags.color\\">#color</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"tags\\">Tags</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering colors with color cascading from parent, self exists 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #FF0033;\\" href=\\"tags.parent.color\\">#parent.color</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"tags\\">Tags</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering colors with color cascading from parent, self missing 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #FF0033;\\" href=\\"tags.parent.color\\">#parent.color</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"tags\\">Tags</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: inside a link" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a href=\\"https://twitter.com/hashtag/dendron\\">#dendron</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: inside a link" 2`] = `
VFile {
  "contents": "<h1 id=\\"root\\">Root</h1>
<p><a href=\\"https://twitter.com/hashtag/dendron\\">#dendron</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;

exports[`hashtag rendering compile "HTML: simple" 1`] = `
VFile {
  "contents": "<h1 id=\\"root\\"><a aria-hidden=\\"true\\" class=\\"anchor-heading\\" href=\\"#root\\"><svg aria-hidden=\\"true\\" viewBox=\\"0 0 16 16\\"><use xlink:href=\\"#svg-link\\"></use></svg></a>Root</h1>
<p><a class=\\"color-tag\\" style=\\"--tag-color: #c95efb;\\" href=\\"tags.my-hash.tag0\\">#my-hash.tag0</a></p>
<hr>
<strong>Children</strong>
<ol>
<li><a href=\\"bar\\">Bar</a></li>
<li><a href=\\"foo\\">Foo</a></li>
</ol>",
  "cwd": "<PROJECT_ROOT>",
  "data": Object {},
  "history": Array [],
  "messages": Array [],
}
`;
